force-app/main/default/objects/EDealer_Quarter_To_Date__mdt/EDealer_Quarter_To_Date__mdt.object-meta.xml
<CustomObject>
    <label>EDealer Quarter To Date</label>
    <pluralLabel>EDealer Quarter To Date</pluralLabel>
</CustomObject>