force-app/main/default/objects/EDealer_Quarter_To_Date__mdt/fields/Availablility__c.field-meta.xml
<CustomField>
    <fullName>Availablility__c</fullName>
    <label>Availablility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>