force-app/main/default/objects/EDealer_Quarter_To_Date__mdt/fields/Scrap__c.field-meta.xml
<CustomField>
    <fullName>Scrap__c</fullName>
    <description>Scrap Percentage</description>
    <label>Scrap</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>